spade-tests/src/snapshots/spade_tests__typeinference__backward_type_in_generic_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
---
entity takes_generic<T>(x: T) -> bool {true}

entity x(b: inv &bool) -> bool {
    inst takes_generic(b)
}


error: x is unused
  ┌─ testinput:1:25
  │
1 │ entity takes_generic<T>(x: T) -> bool {true}
  │                         ^ x is unused
  │
  = note: x is an inverted wire (`inv`) which must be set
  = The error is in a generic unit instantiated at
    ╰ testinput:4 takes_generic<inv bool>
