spade-tests/src/snapshots/spade_tests__typeinference__comb_div_produces_number.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() -> bool {
    true `std::ops::comb_div` true
}


error: Argument type mismatch. Expected Number<#uint> got bool
    ┌─ testinput:2:5
    │
  2 │     true `std::ops::comb_div` true
    │     ^^^^ Expected Number<_>
    │
    ┌─ <compiler dir>/stdlib/ops.spade:144:24
    │
144 │ pub extern fn comb_div<T>(x: T, y: T) -> T;
    │                        - Type Number<_> inferred here
    │
    = note: Expected: Number<_>
                 Got: bool
