spade-tests/src/snapshots/spade_tests__typeinference__comb_mod_produces_number.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() -> bool {
    true `std::ops::comb_mod` true
}


error: Argument type mismatch. Expected Number<#uint> got bool
    ┌─ testinput:2:5
    │
  2 │     true `std::ops::comb_mod` true
    │     ^^^^ Expected Number<_>
    │
    ┌─ <compiler dir>/stdlib/ops.spade:160:24
    │
160 │ pub extern fn comb_mod<T>(x: T, y: T) -> T;
    │                        - Type Number<_> inferred here
    │
    = note: Expected: Number<_>
                 Got: bool
