spade-tests/src/snapshots/spade_tests__typeinference__concatenation_errors_look_good.snap
---
source: spade-tests/src/typeinference.rs
---
entity counter(x: int<4>, y:int<3>) -> int<8> {
    x `std::conv::concat` y
}


error: Output type mismatch. Expected int<8>, got Number<7>
  ┌─ testinput:1:47
  │  
1 │   entity counter(x: int<4>, y:int<3>) -> int<8> {
  │                                          ------ int<8> type specified here
  │ ╭───────────────────────────────────────────────^
2 │ │     x `std::conv::concat` y
  │ │     ----------------------- Type 7 inferred here
3 │ │ }
  │ ╰─^ Found type Number<7>
  │  
  = note: Expected: 8
                in: int<8>
               Got: 7
                in: Number<7>
