spade-tests/src/snapshots/spade_tests__typeinference__different_types_in_if.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(b: int<4>) -> int<8> {
    let a = if b == 4 { 3 } else { true };
    7
}


error: If branches have incompatible type
  ┌─ testinput:2:34
  │
2 │     let a = if b == 4 { 3 } else { true };
  │                       -----      ^^^^^^^^
  │                       │          │ │
  │                       │          │ Type bool inferred here
  │                       │          But this has type bool
  │                       This branch has type Number<#uint>
  │                       Type Number<_> inferred here
  │
  = note: Expected: Number<_>
               Got: bool
